dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id$
AC_REVISION($Revision$)
AC_CONFIG_HEADER(config.h:config.hin)
AC_INIT(esc.c)
AC_PROG_CC
AC_PROG_INSTALL
AC_GCC_TRADITIONAL

###	use option -with-warnings to turn on all gcc warnings
if test -n "$GCC"
then
AC_ARG_WITH(warnings,
[  --with-warnings         use gcc warnings (used for developing this tool)],
[CFLAGS="$CFLAGS -Wall -Wshadow -Wconversion -Wstrict-prototypes -Wmissing-prototypes"])
fi

###	extra things that we'll substitute in the makefile
AC_TYPE_SIGNAL
AC_STDC_HEADERS
AC_HAVE_HEADERS( \
fcntl.h \
ioctl.h \
sgtty.h \
stdlib.h \
string.h \
sys/filio.h \
sys/ioctl.h \
termio.h \
termios.h \
unistd.h \
)

AC_HAVE_FUNCS( \
alarm \
rdchk \
tcgetattr \
usleep \
)

###	special configuration tests
CF_POSIX_VDISABLE
CF_FCNTL_VS_IOCTL

###	debugging/testing

###	output makefile and config.h
AC_OUTPUT(makefile)
